# rust-http-client-benchmark

./: Cargo.toml  README.md
benches/: my_benchmark.rs
data/: extra.txt  urls.txt
src/: lib.rs  reqwest.rs  utils.rs
src/reg/: main.rs
