[package]
authors = ["Alex Kreidler <alexkreidler2020@gmail.com>"]
edition = "2018"
name = "http-client-benchmark"
version = "0.1.0"

[[bin]]
name = "reg"
path = "src/reg/main.rs"

[[bench]]
harness = false
name = "my_benchmark"

[dependencies]
anyhow = "*"
attohttpc = "0.15.0"
awc = "1.0.1"
cabot = "0.6.0"
criterion = "0.3.3"
futures = "0.3.5"
http_req = "0.7.0"
isahc = "0.9.5"
minreq = "2.2.0"
reqwest = "0.10.6"
surf = "1.0.3"
ureq = "1.3.0"

[dependencies.tokio]
features = ["full"]
version = "0.2.21"

[lib]
name = "httpbench"
